--- a/.github/workflews/main.yml
+++ b/.github/workflews/main.yml
@@ -1,10 +1,10 @@
 name: github to deploy
-on: 
-  push:
-    branches:
-      - main
-    tags:
-      - '[0-9]+.[0-9]+.[0-9]*'
+on: [push, pull_request]
+  branches:
+    - main
+  tags:
+    - '[0-9]+.[0-9]+.[0-9]*'
+    
 jobs:
   name: deploy to server
   runs-on: ubuntu-latest
