--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
-          password: ${{ secrets.SSH_PASS }}
+          password: ${{ secrets.SERVER_PASS }}
           port: ${{ secrets.SSH_PORT }}
           script: |
             cd ${{ secrets.SERVER_DEPLOY_DIR }}
